--- a/Desenvolvimento avançado com JavaScript ES6/index.html
+++ b/Desenvolvimento avançado com JavaScript ES6/index.html
@@ -11,7 +11,9 @@
     <!-- <script src="js/aula2.js"></script> -->
     <!-- <script src="js/aula3.js"></script> -->
     <!-- <script src="js/aula4.js"></script> -->
-    <script src="js/aula5.js"></script>
+    <!-- <script src="js/aula5.js"></script> -->
+    <!-- <script src="js/aula6.js"></script> -->
+    <script src="js/aula7.js"></script>
 </body>
 
 </html>
