add promise class

--- a/Desenvolvimento avançado com JavaScript ES6/index.html
+++ b/Desenvolvimento avançado com JavaScript ES6/index.html
@@ -13,7 +13,8 @@
     <!-- <script src="js/aula4.js"></script> -->
     <!-- <script src="js/aula5.js"></script> -->
     <!-- <script src="js/aula6.js"></script> -->
-    <script src="js/aula7.js"></script>
+    <!-- <script src="js/aula7.js"></script> -->
+    <script src="js/aula8.js"></script>
 </body>
 
 </html>
