feat: finalizando cursos

--- a/Desenvolvimento avançado com JavaScript ES6/index.html
+++ b/Desenvolvimento avançado com JavaScript ES6/index.html
@@ -14,7 +14,9 @@
     <!-- <script src="js/aula5.js"></script> -->
     <!-- <script src="js/aula6.js"></script> -->
     <!-- <script src="js/aula7.js"></script> -->
-    <script src="js/aula8.js"></script>
+    <!-- <script src="js/aula8.js"></script> -->
+    <!-- <script src="js/aula9.js"></script> -->
+    <script src="js/aula10.js"></script>
 </body>
 
 </html>
